# zermio

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml  release.yml
resources/: mmio.hh  zermio.rs
resources/tests/input/: i2c.svd  rdl.json
resources/tests/snapshots/: i2c.hh  io_bank.hh  test_devices.hh  test_peripherals.hh  test_platform.hh  timer.hh
resources/tests/snapshots/generate_cpp_from_rdljson/: gpio.hh  i2c.hh  pwm.hh  sonata_platform.hh  spi.hh  timer.hh  uart.hh  xadc.hh
resources/tests/snapshots/generate_rust_from_rdljson/: gpio.rs  i2c.rs  lib.rs  pwm.rs  sonata.rs  spi.rs  timer.rs  uart.rs  xadc.rs
src/: main.rs
src/lib/: filters.rs  generator.rs  lib.rs  mmio.rs  rdljson.rs  schema.rs
src/lib/generator/: cpp.rs  mod.rs  rust.rs
src/lib/mmio/: bitfield.rs  device.rs  interrupt.rs  mod.rs  permissions.rs  platform.rs  register.rs
templates/rust/: device.rs.txt  lib.rs.txt  platform.rs.txt  register.rs.txt
