[package]
name = "reismmio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
function_name = "0.3.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
svd-parser = "0.14.9"
svd-rs = "0.14.12"

[lib]
name = "reismmiolib"
path = "src/lib/lib.rs"


[[bin]]
name = "reismmio_cli"
path = "src/main.rs"
